# bmwmcottawa-analytics

./: .gitignore  .tool-versions  AnalyticsPipeline.ipynb  Makefile  README.md  analytics-pipeline.ipynb  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
bmwmcottawa_analytics/: __init__.py  dataset.py  features.py  plots.py
data-output-charts/: README.md  bmwmcottawa-analytics.md
data-sets/: README.md  gender+by+name+missing+records.csv
data/raw/: README.md
docs/: README-analysis.md  README-devenv.md  mkdocs.yml
notebooks/: 01-ActiveMembersExtra-Clean.ipynb  01-ActiveMembersExtra-Schema.ipynb  01a-ActiveMembersExtra-Schema.ipynb  01b-ActiveMembersExtra-Data.ipynb  01c-ActiveMembersExtra-Demographics.ipynb  01d-ActiveMembersExtra-CountryDistribution.ipynb  01f-ActiveMembersExtra-CanadianCityDistribution.ipynb  02-ActiveMembersExtra-Gender.ipynb  02-EventInformationData-Schema.ipynb  02a-EventInformationData-Schema.ipynb  02b-EventInformationData-Data.ipynb  03-ActiveMembersExtraGender-Demographics.ipynb  03-EventsAndRegistrants-Schema.ipynb  03a-EventsAndRegistrants-Schema.ipynb  03b-EventsAndRegistrants-Data.ipynb  04-ActiveMembersExtraGender-CountryDistribution.ipynb  04-ActiveMembersExtraGender-GeographicDistribution.ipynb  04a-EngagementSparse-Data.ipynb  04a-FactlessEvents.ipynb  05a-EngagementScores-Data.ipynb  config.py
references/: 01-ActiveMembersExtra-Schema.md  02-EventInformationData-Schema.md  03-EventsAndRegistrants-Schema.md
reports/: bmwmcottawa-analytics.md  club-demographics.md  club-engagement.md
(+7 files in other folders)
