[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bmwmcottawa_analytics"
version = "0.0.1"
description = "Analytics for BMW Motorcyle Club Ottawa"
authors = [
  { name = "Pierre Archambault" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
case-sensitive = false
classes = []
combine-as-imports = false
constants = []
default-section = "THIRDPARTY"
detect-same-package = false
extra-standard-library = []
force-single-line = false
force-sort-within-sections = true
force-to-top = []
force-wrap-aliases = false
forced-separate = []
from-first = false
known-first-party = []
known-local-folder = []
known-third-party = []
length-sort = false
length-sort-straight = false
lines-after-imports = 2
lines-between-types = 0
no-lines-before = []
no-sections = false
order-by-type = true
# relative-imports-order = {}
# required-imports = {}
section-order = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
sections = { FUTURE = [], STDLIB = [], THIRDPARTY = [], FIRSTPARTY = [], LOCALFOLDER = [] }
single-line-exclusions = []
split-on-trailing-comma = false
variables = []
